--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/_pages/md_state_parks">Parks</a>
+            <a href="{{ site.baseurl }}/parks">Parks</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
